[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/EndScreen.gd" type="Script" id=1]
[ext_resource path="res://GameTheme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/Montserrat-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 397.0
margin_top = 139.0
margin_right = 619.0
margin_bottom = 189.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game over!"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 461.0
margin_top = 217.0
margin_right = 653.0
margin_bottom = 265.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="BestScoreLabel" type="Label" parent="."]
margin_left = 462.0
margin_top = 251.0
margin_right = 654.0
margin_bottom = 299.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="RestartButton" type="Button" parent="."]
margin_left = 437.0
margin_top = 314.0
margin_right = 587.0
margin_bottom = 378.0
focus_mode = 0
enabled_focus_mode = 0
text = "Restart"

[connection signal="button_down" from="RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="button_up" from="RestartButton" to="." method="_on_RestartButton_button_up"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
